<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewBlogActivity">

    <Button
        android:id="@+id/create_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:background="@drawable/buttons"
        android:padding="6dp"
        android:text="@string/create_new_blog"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/set_blog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_blog"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/enter_blog_name"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/set_blog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_blog_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/inputs"
        android:textCursorDrawable="@android:color/black"
        android:hint="@string/enter_blog_description"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/set_blog_description"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/set_blog_cover_photo"
            android:layout_centerHorizontal="true"
            android:cropToPadding="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/set_blog_description"
            android:scaleType="fitCenter"
            android:contentDescription="@string/blog_cover_photo" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>