<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadBlogActivity">

    <Button
        android:id="@+id/edit_read_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttons"
        android:text="@string/edit"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/go_to_blog_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/edit_read_blog"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/buttons"
        android:text="@string/blog_profile"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/post_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blog_cover_photo"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edit_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:visibility="gone"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="14sp"
                />
            <EditText
                android:id="@+id/edit_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="14sp"
                android:visibility="gone"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>